Job summary design done

--- a/src/app/components/job-state-status-bar/job-state-status-bar.component.html
+++ b/src/app/components/job-state-status-bar/job-state-status-bar.component.html
@@ -13,7 +13,7 @@
         <h4 class="job-status-text">{{job.company.name}}</h4>
         <h6 class="job-status-text">{{job.jobDate | date: 'MMM dd'}} - {{job.jobEndDate | date: 'MMM dd'}}</h6>
         <h6 class="job-status-text">{{job.street}}</h6>
-        <h2 class="job-status-salary-text">{{job.grossSalary}} {{job.currency}}</h2>
+        <h2 class="job-status-salary-text">{{job.grossAmount}} {{job.currency}}</h2>
       </div>
     </div>
   </div>
