--- a/src/app/views/job-details/job-details.component.scss
+++ b/src/app/views/job-details/job-details.component.scss
@@ -11,6 +11,49 @@
   }
 }
 
+.job-title {
+  margin-bottom: 0px;
+}
+
+.separator {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.job-details-container {
+  max-width: 600px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: $default-bg-color;
+}
+
+.job-preview-row {
+  flex-wrap: nowrap;
+}
+
+.close-container {
+  text-align: right;
+  margin-bottom: 10px;
+}
+
+.job-translate-container {
+  text-align: right;
+}
+
+.job-preview-text {
+  margin-bottom: 0px;
+}
+
+.job-preview-icon-container {
+  width: auto;
+  text-align: center;
+}
+
 .job-details-body {
   background-color: $default-bg-color;
   .content {
