Removed some padding from the "Jobs applied for" header

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -69,7 +69,7 @@
 
   <div class="row" *ngIf="user">
     <div class="home-jobs-applied-for-header-wrapper col-xs-12">
-      <div class="home-jobs-applied-for-header col-xs-10 offset-xs-1">
+      <div class="home-jobs-applied-for-header col-xs-10">
         <h3>Jobs applied for</h3>
       </div>
     </div>
