Reshaping of job cards on start page when user is logged in

--- a/src/app/styles/variables.scss
+++ b/src/app/styles/variables.scss
@@ -68,5 +68,8 @@ $default-bg-color: $white;
 // Borders
 $white-bg-border: $color-gray-50;
 
+// Job cards
+$job-card-border-radius: 8px;
+
 //Fonts
 $museo:           "museo", "Helvetica Neue", Helvetica, Arial, sans-serif;
