--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <div class="profile-input-container">
-        <label>{{'user.profile.form.status.label' | translate}} *:</label>
+        <label>{{'user.profile.form.status.label' | translate}}:</label>
         <div class="input-radio-container row">
           <div *ngFor="let status of statuses" class="input-radio-button-container">
             <label class="input-radio-button-label" for="{{status.id}}">
@@ -31,22 +31,11 @@
             {{status.name}}</label>
           </div>
         </div>
-        <div *ngIf="!profileForm.value.current_status" class="alert alert-danger">{{'user.profile.form.status.validation.required' | translate}}.</div>
         <div *ngIf="serverValidationErrors.current_status" class="alert alert-danger">{{serverValidationErrors.current_status}}.</div>
       </div>
 
-      <div *ngIf="profileForm.value.current_status !== 'asylum_seeker'" class="profile-upload-button-container">
-        <input type="file" id="residence-permit-image-filename" name="residence-permit-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'residence_permit', residencePermitImageStatusObject)" accept="image/*">
-        <label for="residence-permit-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.residence.permit.upload.button' | translate}}</label>
-        <p>{{'user.profile.form.residence.permit.upload.description' | translate}}*</p>
-        <div *ngIf="user.residence_permit_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.residence_permit_image.imageUrl + ')'}"></div>
-        <div *ngIf="residencePermitImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.residence.permit.upload.success' | translate}}</div>
-        <div *ngIf="residencePermitImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.residence.permit.upload.fail' | translate}}</div>
-        <div *ngIf="!user.residence_permit_image" class="alert alert-danger">{{'user.profile.form.residence.permit.upload.required' | translate}}.</div>
-      </div>
-
       <div *ngIf="profileForm.value.current_status === 'asylum_seeker'" class="profile-input-container">
-        <label>{{'user.profile.form.at.und.label' | translate}} *:</label>
+        <label>{{'user.profile.form.at.und.label' | translate}}:</label>
         <div class="input-radio-container">
           <div class="input-radio-button-container">
             <label class="input-radio-button-label" for="at-und-yes">
@@ -61,12 +50,11 @@
             {{'common.no' | translate}}</label>
           </div>
         </div>
-        <div *ngIf="!profileForm.value.at_und" class="alert alert-danger">{{'user.profile.form.at.und.required' | translate}}.</div>
         <div *ngIf="serverValidationErrors.at_und" class="alert alert-danger">{{serverValidationErrors.at_und}}.</div>
       </div>
 
       <div *ngIf="profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes'" class="profile-input-container">
-        <label>{{'user.profile.form.got.coordination.number.label' | translate}} *:</label>
+        <label>{{'user.profile.form.got.coordination.number.label' | translate}}:</label>
         <div class="input-radio-container">
           <div class="input-radio-button-container">
             <label class="input-radio-button-label" for="got-coordination-number-yes">
@@ -81,34 +69,79 @@
             {{'common.no' | translate}}</label>
           </div>
         </div>
-        <div *ngIf="!profileForm.value.at_und" class="alert alert-danger">{{'user.profile.form.got.coordination.number.required' | translate}}.</div>
       </div>
 
-      <div *ngIf="profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes' && profileForm.value.got_coordination_number === 'yes'" class="form-group material-group profile-input-container" [ngClass]="{'has-error':!profileForm.value.coordination_number || !serverValidationErrors.coordination_number}">
-        <label for="coordination_number">{{'user.profile.form.coordination.number.label' | translate}} *:</label>
-        <input class="form-control material-input" id="coordination_number" name="coordination-number-input" type="text" (focus)="serverValidationErrors.coordination_number = ''" placeholder="{{'user.profile.form.coordination.number.placeholder' | translate}}" [formControl]="profileForm.controls['coordination_number']">
-        <div *ngIf="!profileForm.value.coordination_number" class="alert alert-danger">{{'user.profile.form.coordination.number.required' | translate}}.</div>
-        <div *ngIf="serverValidationErrors.coordination_number" class="alert alert-danger">{{serverValidationErrors.coordination_number}}.</div>
+      <div *ngIf="profileForm.value.current_status && ((profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes' && profileForm.value.got_coordination_number === 'yes') || (profileForm.value.current_status !== 'asylum_seeker'))" class="form-group material-group profile-input-container" [ngClass]="{'has-error':!profileForm.value.ssn || !serverValidationErrors.ssn}">
+        <label *ngIf="profileForm.value.current_status === 'asylum_seeker'" for="ssn">{{'user.profile.form.coordination.number.label' | translate}}:</label>
+        <label *ngIf="profileForm.value.current_status === 'eu_citizen'" for="ssn">{{'user.profile.form.coordination.number.or.ssn.label' | translate}}:</label>
+        <label *ngIf="profileForm.value.current_status !== 'asylum_seeker' && profileForm.value.current_status !== 'eu_citizen'" for="ssn">{{'user.profile.form.ssn.label' | translate}}:</label>
+        <input *ngIf="profileForm.value.current_status === 'asylum_seeker'" class="form-control material-input" id="ssn" name="ssn-input" type="text" (focus)="serverValidationErrors.ssn = ''" placeholder="{{'user.profile.form.coordination.number.placeholder' | translate}}" [formControl]="profileForm.controls['ssn']">
+        <input *ngIf="profileForm.value.current_status === 'eu_citizen'" class="form-control material-input" id="ssn" name="ssn-input" type="text" (focus)="serverValidationErrors.ssn = ''" placeholder="{{'user.profile.form.coordination.number.or.ssn.placeholder' | translate}}" [formControl]="profileForm.controls['ssn']">
+        <input *ngIf="profileForm.value.current_status !== 'asylum_seeker' && profileForm.value.current_status !== 'eu_citizen'" class="form-control material-input" id="ssn" name="ssn-input" type="text" (focus)="serverValidationErrors.ssn = ''" placeholder="{{'user.profile.form.ssn.placeholder' | translate}}" [formControl]="profileForm.controls['ssn']">
+        <div *ngIf="serverValidationErrors.ssn" class="alert alert-danger">{{serverValidationErrors.ssn}}.</div>
       </div>
 
       <div *ngIf="profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes' && profileForm.value.got_coordination_number === 'yes'" class="profile-upload-button-container">
         <input type="file" id="lma-image-filename" name="lma-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'lma_card', lmaImageStatusObject)" accept="image/*">
         <label for="lma-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.lma.upload.button' | translate}}</label>
-        <p>{{'user.profile.form.lma.upload.description' | translate}}*</p>
+        <p>{{'user.profile.form.lma.upload.description' | translate}}</p>
         <div *ngIf="user.lma_card_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.lma_card_image.imageUrl + ')'}"></div>
         <div *ngIf="lmaImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.lma.upload.success' | translate}}</div>
         <div *ngIf="lmaImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.lma.upload.fail' | translate}}</div>
-        <div *ngIf="!user.lma_card_image" class="alert alert-danger">{{'user.profile.form.lma.upload.required' | translate}}.</div>
       </div>
 
-      <div *ngIf="profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes' && profileForm.value.got_coordination_number === 'yes'" class="profile-upload-button-container">
+      <div *ngIf="profileForm.value.current_status !== 'asylum_seeker'" class="profile-upload-button-container">
+        <input type="file" id="personal-id-image-filename" name="personal-id-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'personal_id', personalIdImageStatusObject)" accept="image/*">
+        <label for="personal-id-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.personal.id.upload.button' | translate}}</label>
+        <p>{{'user.profile.form.personal.id.upload.description' | translate}}</p>
+        <div *ngIf="user.personal_id_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.personal_id_image.imageUrl + ')'}"></div>
+        <div *ngIf="personalIdImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.personal.id.upload.success' | translate}}</div>
+        <div *ngIf="personalIdImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.personal.id.upload.fail' | translate}}</div>
+      </div>
+
+      <div *ngIf="profileForm.value.current_status === 'temporary_residence' || profileForm.value.current_status === 'permanent_residence'" class="profile-upload-button-container">
+        <input type="file" id="residence-permit-front-image-filename" name="residence-permit-front-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'residence_permit_front', residencePermitFrontImageStatusObject)" accept="image/*">
+        <label for="residence-permit-front-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.residence.permit.front.upload.button' | translate}}</label>
+        <p>{{'user.profile.form.residence.permit.front.upload.description' | translate}}</p>
+        <div *ngIf="user.residence_permit_front_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.residence_permit_front_image.imageUrl + ')'}"></div>
+        <div *ngIf="residencePermitFrontImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.residence.permit.front.upload.success' | translate}}</div>
+        <div *ngIf="residencePermitFrontImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.residence.permit.front.upload.fail' | translate}}</div>
+      </div>
+
+      <div *ngIf="profileForm.value.current_status === 'temporary_residence' || profileForm.value.current_status === 'permanent_residence'" class="profile-upload-button-container">
+        <input type="file" id="residence-permit-back-image-filename" name="residence-permit-back-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'residence_permit_back', residencePermitBackImageStatusObject)" accept="image/*">
+        <label for="residence-permit-back-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.residence.permit.back.upload.button' | translate}}</label>
+        <p>{{'user.profile.form.residence.permit.back.upload.description' | translate}}</p>
+        <div *ngIf="user.residence_permit_back_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.residence_permit_back_image.imageUrl + ')'}"></div>
+        <div *ngIf="residencePermitBackImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.residence.permit.back.upload.success' | translate}}</div>
+        <div *ngIf="residencePermitBackImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.residence.permit.back.upload.fail' | translate}}</div>
+      </div>
+
+      <div *ngIf="profileForm.value.current_status === 'student_visa' || profileForm.value.current_status === 'temporary_residence'" class="profile-upload-button-container">
+        <input type="file" id="work-permit-front-image-filename" name="work-permit-front-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'work_permit_front', workPermitFrontImageStatusObject)" accept="image/*">
+        <label for="work-permit-front-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.work.permit.front.upload.button' | translate}}</label>
+        <p>{{'user.profile.form.work.permit.front.upload.description' | translate}}</p>
+        <div *ngIf="user.work_permit_front_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.work_permit_front_image.imageUrl + ')'}"></div>
+        <div *ngIf="workPermitFrontImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.work.permit.front.upload.success' | translate}}</div>
+        <div *ngIf="workPermitFrontImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.work.permit.front.upload.fail' | translate}}</div>
+      </div>
+
+      <div *ngIf="profileForm.value.current_status === 'student_visa' || profileForm.value.current_status === 'temporary_residence'" class="profile-upload-button-container">
+        <input type="file" id="work-permit-back-image-filename" name="work-permit-back-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'work_permit_back', workPermitBackImageStatusObject)" accept="image/*">
+        <label for="work-permit-back-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.work.permit.back.upload.button' | translate}}</label>
+        <p>{{'user.profile.form.work.permit.back.upload.description' | translate}}</p>
+        <div *ngIf="user.work_permit_back_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.work_permit_back_image.imageUrl + ')'}"></div>
+        <div *ngIf="workPermitBackImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.work.permit.back.upload.success' | translate}}</div>
+        <div *ngIf="workPermitBackImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.work.permit.back.upload.fail' | translate}}</div>
+      </div>
+
+      <div *ngIf="profileForm.value.current_status === 'eu_citizen' || profileForm.value.current_status === 'asylum_seeker' && profileForm.value.at_und === 'yes' && profileForm.value.got_coordination_number === 'yes'" class="profile-upload-button-container">
         <input type="file" id="skatteverket-certificate-image-filename" name="skatteverket-certificate-image-filename" class="input-image-upload" (change)="onImageFilenameChange($event, 'skatteverket_certificate', skatteverketCertificateImageStatusObject)" accept="image/*">
         <label for="skatteverket-certificate-image-filename" class="btn-secondary btn-small btn btn-image-upload">{{'user.profile.form.skatteverket.certificate.upload.button' | translate}}</label>
-        <p>{{'user.profile.form.skatteverket.certificate.upload.description' | translate}}*</p>
+        <p>{{'user.profile.form.skatteverket.certificate.upload.description' | translate}}</p>
         <div *ngIf="user.skatteverket_certificate_image" class="permit-image" [ngStyle]="{'background-image': 'url(' + user.skatteverket_certificate_image.imageUrl + ')'}"></div>
         <div *ngIf="skatteverketCertificateImageStatusObject.imageSaveSuccess" class="save-message">{{'user.profile.form.skatteverket.certificate.upload.success' | translate}}</div>
         <div *ngIf="skatteverketCertificateImageStatusObject.imageSaveFail" class="error-message">{{'user.profile.form.skatteverket.certificate.upload.fail' | translate}}</div>
-        <div *ngIf="!user.skatteverket_certificate_image" class="alert alert-danger">{{'user.profile.form.skatteverket.certificate.upload.required' | translate}}.</div>
       </div>
 
       <hr>
