Added translation for 404 page

--- a/src/app/views/404/404.component.html
+++ b/src/app/views/404/404.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid not-found-component-wrapper">
   <h1 class="col-xs-12 not-found-component-text">
-    404 - Page Not Found
+    {{'page_not_found_error.header' | translate}}
   </h1>
   <h3 class="col-xs-12 not-found-component-text">
-    Sorry, the page you are looking for does not exist.
+    {{'page_not_found_error.subtitle' | translate}}
   </h3>
 </div>
