--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -3,11 +3,11 @@
     <job-state-status-bar [job]="job" [jobId]="job.id"></job-state-status-bar>
 
     <div class="job-details-container">
-      <div class="row">
+      <!--<div class="row">
         <div class="col-xs-12 close-container">
           <i class="fa fa-times fa-lg"></i>
         </div>
-      </div>
+      </div>--><!-- Add this when this view and its' components are merged -->
       <div class="row">
         <div class="col-xs-6">
           <h4 class="job-title">{{'assignment' | translate | uppercase}}</h4>
@@ -53,7 +53,7 @@
             <i class="fa fa-calendar fa-lg"></i>
           </div>
         </div>
-        <div class="col-xs-11">
+        <div class="col-xs-11 last-info-cell">
           <p class="job-preview-text">{{job.jobDate | date: 'yyyy-mm-dd'}} - {{job.jobEndDate | date: 'yyyy-mm-dd'}}</p>
           <hr class="separator"/>
         </div>
