Removed unnecessary class.

--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -53,7 +53,7 @@
             <i class="fa fa-calendar fa-lg"></i>
           </div>
         </div>
-        <div class="col-xs-11 last-info-cell">
+        <div class="col-xs-11">
           <p class="job-preview-text">{{job.jobDate | date: 'yyyy-mm-dd'}} - {{job.jobEndDate | date: 'yyyy-mm-dd'}}</p>
           <hr class="separator"/>
         </div>
